tests/ui/g-efflist-deref.stderr
error[E0599]: no method named `eff_list` found for struct `RoleProgram<'prog, ROLE, LocalSteps, Mint>` in the current scope
  --> tests/ui/g-efflist-deref.rs:19:21
   |
19 |     let _ = program.eff_list();
   |                     ^^^^^^^^ private field, not a method
